# face-detect-laforge

./: .gitignore  Dockerfile  Makefile  README.md  db-vector.py  docker-compose.yml  interface.py  main.py  pyproject.toml
app/: __init__.py  config.py
app/ml/: __init__.py  embedder.py  online_face_learner.py
app/services/: annotation_logic.py  face_pipeline.py
app/storage/: milvus_store.py
app/ui/: streamlit_app.py
app/vision/: face_detection.py
app/workers/: background.py
ml/: embedding.py  search.py
scripts/: rebuild_index.py
tests/: test_background_worker.py  test_display_import_path.py  test_face_pipeline.py  test_milvus_store.py  test_online_face_learner.py
view/: display.py  interface.py  upload.py
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: 6ad3e8e7-543c-47c8-ae39-a97a4b2e27e8  86f15ba4-aa7f-461c-9b1f-3e36c4f26fbb
volumes/minio/.minio.sys/tmp/.trash/d1d67be2-3292-4711-b78f-f22185b40f27/: xl.meta.bkp
